crates/toml/tests/snapshots/invalid/array/only-comma-01.stderr
TOML parse error at line 1, column 18
  |
1 | only-comma-01 = [,]
  |                  ^
extra comma in array, expected value
